login and register w/o sessions
