# src/routers/AuthRouter.js
@@ -2,6 +2,7 @@ const express = require("express");
 const router = express.Router();
 const controller = require("../controllers")
 
-router.post("/logout", controller.userController.logout)
+router.post("/login", controller.authController.login)
+router.post("/register", controller.authController.register)
 
 module.exports = router;
